<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="BacktoLoginTextLALA">back to login</string>
    <string name="BioPageEditProfile">Edit Profile</string>
    <string name="BiopageBacktoProfileText">Profile</string>
    <string name="Biopage_biostring">Bio..</string>
    <string name="EditProfile1Label">Edit Profile(1/2)</string>
    <string name="EditProfileBackText">Back</string>
    <string name="EditProfileBio">Bio..</string>
    <string name="EditProfileBioTag">Bio:</string>
    <string name="EditProfileChangePasswordLabel">Change Password:</string>
    <string name="EditProfileGender">Enter M or F</string>
    <string name="EditProfileGenderLabel">Gender</string>
    <string name="EditProfileInstructionPicture">Click the plus sign to change image</string>
    <string name="EditProfileName">Name..</string>
    <string name="EditProfileNext">Next</string>
    <string name="EditProfileRelationHint">You&apos;ve about 20 characters, Be creative..</string>
    <string name="EditProfileRelationShiplabel">In a relationship with</string>
    <string name="EditProfileSkip">Skip</string>
    <string name="EditProfileUpdateInformation">Update Information</string>
    <string name="EmailAddressString">Email Address</string>
    <string name="EmailString">User Name</string>
    <string name="Email_text">Email Address</string>
    <string name="FirstNameString">Name</string>
    <string name="FirstName_name_text">Name</string>
    <string name="FirstName_text">First Name</string>
    <string name="HomeLoadMore">load more...</string>
    <string name="HottestSingleItemName">Name</string>
    <string name="HottestSingleItemRating">pRating</string>
    <string name="HottestSingleItemRatingLabel">Rating:</string>
    <string name="HottestSingleItemUserName">Username</string>
    <string name="LastNameString">Last Name</string>
    <string name="LastName_name_text">Name</string>
    <string name="LastName_text">Last Name</string>
    <string name="LoginOr_text">Or</string>
    <string name="NewConfirmPasswordString">Confirm Password</string>
    <string name="NewPasswordString">Password</string>
    <string name="NoteStringg">Note: Use your school&apos;s official email address for verification!!!</string>
    <string name="NotificationBackText">Back</string>
    <string name="OrLogin">OR</string>
    <string name="OtherProfilesBio">Bio..</string>
    <string name="OthersProfileBioLabel">Bio:</string>
    <string name="OthersProfileGender">Medium Text</string>
    <string name="OthersProfileGenderLabel">Gender:</string>
    <string name="OthersProfileName">Name</string>
    <string name="OthersProfilePostCaptionAverageRating">Rating</string>
    <string name="OthersProfilePostCaptionAverageRatinglabel">Average Rating:</string>
    <string name="OthersProfilePostCaptionCreatedAt">CreatedAt</string>
    <string name="OthersProfilePostCaptionLabel">Caption</string>
    <string name="OthersProfileRating">Loading..</string>
    <string name="OthersProfileRatingLabel">Profile Rating:</string>
    <string name="OthersProfileRelation">Medium Text</string>
    <string name="OthersProfileSchool">School</string>
    <string name="OthersProfileUserName">Username..</string>
    <string name="OthersProfilerelationLabel">In a relationship with:</string>
    <string name="PasswordString">Password</string>
    <string name="ProFilePOstAverageRating">Rating</string>
    <string name="ProFilePOstAverageRatingLabel">Average Rating:</string>
    <string name="ProFilePOstCaption">Caption</string>
    <string name="ProFilePOstCreatedAt">CreatedAt</string>
    <string name="ProfileName">Name</string>
    <string name="ProfileRating">Loading..</string>
    <string name="ProfileRatingLabel">Profile Rating:</string>
    <string name="ProfileSchool">School</string>
    <string name="ProfileUserName">Username..</string>
    <string name="RatingSinglePostCreatedAt">CreatedAt</string>
    <string name="RatingSinglePostName">Name</string>
    <string name="RatingSinglePostRating">rating</string>
    <string name="SearchAllSchools">All Schools</string>
    <string name="SearchByName">by Name</string>
    <string name="SearchByUserName">by UserName</string>
    <string name="SearchHIntLa">Search...</string>
    <string name="SearchNoteCase">Note: Search is case sensitive.</string>
    <string name="SearchText">Search</string>
    <string name="SignUpFirstBackToLoginText">Back to Login</string>
    <string name="SignUpFirstEmailAddress">Email Address</string>
    <string name="SignUpFirstNextButton">Next</string>
    <string name="SignUpFirstUploadPictureNote">Upload Profile Picture (tap on the plus sign)</string>
    <string name="SignUpLoginButtonString">Login?</string>
    <string name="SignUpLogin_button_text">Login ?</string>
    <string name="SignUpText">Sign Up</string>
    <string name="SignUp_text">Sign Up</string>
    <string name="SigninButtonString">Sign Up</string>
    <string name="SigninOrTextString">Or</string>
    <string name="SignupSwitch_text">Sign up?</string>
    <string name="SingleItemViewBackText">back</string>
    <string name="SingleItemViewCaption">Caption..</string>
    <string name="SingleItemViewDate">Date</string>
    <string name="SingleItemViewName">Getting Name...</string>
    <string name="SingleItemViewRating">Calculating Average...</string>
    <string name="SingleItemViewRatingLabel">Ratings</string>
    <string name="SingleItemViewRatingRateAnonly">Rate Anonymously</string>
    <string name="SingleItemViewRatinglabellll">Average Rating:</string>
    <string name="SingleNotificationCreatedBy">createdBy</string>
    <string name="SingleNotificationRatedYourPictureText">rated your picture</string>
    <string name="SingleNotificationRating">rating</string>
    <string name="SinglePostCaption">Caption</string>
    <string name="SinglePostCreatedAt">CreatedAt</string>
    <string name="SinglePostName">Name</string>
    <string name="SinglePostRatingLabel">Average Rating:</string>
    <string name="SinglePostRatingreal">Calculating..</string>
    <string name="SingleSearchName">Name</string>
    <string name="SingleSearchRating">Rating</string>
    <string name="SingleSearchUserName">Small Text</string>
    <string name="SingupLoginP">Sign Up?</string>
    <string name="UploadIMageCaptionText">Caption</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">One-to-ten</string>
    <string name="biopageBioLabel">Bio:</string>
    <string name="biopageGender">Medium Text</string>
    <string name="biopageGenderlabel">Gender:</string>
    <string name="biopageRealtionshiplabel">In a relationship with:</string>
    <string name="biopageRelationship">Medium Text</string>
    <string name="checkbox_text">Remember me?</string>
    <string name="confirmPassword_text">Confirm Password</string>
    <string name="countrylabel">Country : </string>
    <string name="editProfileBackButton">Back</string>
    <string name="editProfileFullNamelabel">Full Name:</string>
    <string name="fullstop">.</string>
    <string name="hello_world">Hello world!</string>
    <string name="logInButtonLogin">Log In</string>
    <string name="loginString">Log In</string>
    <string name="menu_settings">Settings</string>
    <string name="newUserText">New User?</string>
    <string name="othersProfileText">Others Profile</string>
    <string name="password_text">Password</string>
    <string name="populationlabel">Population : </string>
    <string name="ranklabel">Rank : </string>
    <string name="schoolNameString">School Name</string>
    <string name="title_activity_bio_page">BioPage</string>
    <string name="title_activity_edit_profie">EditProfie</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_edit_profile1">EditProfile1</string>
    <string name="title_activity_gesture">gesture</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_hottest_in_school">HottestInSchool</string>
    <string name="title_activity_main">1-to-TEN</string>
    <string name="title_activity_no_internet_page">noInternetPage</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="title_activity_other_profiles_bio">otherProfilesBio</string>
    <string name="title_activity_others_profile">OthersProfile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_sign_up_first">SignUpFirst</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_single_item_view">SingleItemView</string>
    <string name="title_activity_skip_edit_profile">SkipEditProfile</string>
    <string name="title_activity_splash_screen">1-to-TEN</string>
    <string name="title_activity_start_page">One-to-TEN</string>
    <string name="title_activity_upload__image">Upload Image</string>
    <string name="uploadImageHomeButtonText">homeButton</string>
</resources>
