<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#24c0c0c0" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <ImageView android:id="@+id/dpPicture" android:padding="5dp" android:layout_width="UNKNOWN_DATA_0x5001" android:layout_height="UNKNOWN_DATA_0x4601" android:layout_alignParentTop="true" android:onClick="profileclick" android:layout_alignParentStart="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/sFname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SinglePostName" android:layout_alignParentTop="true" android:onClick="onItemClick" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/dpPicture" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="#ffabaaaa" android:id="@+id/HCreatedAt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SinglePostCreatedAt" android:layout_below="@+id/sFname" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/dpPicture" />
    <ImageView android:id="@+id/Rimage" android:paddingTop="5dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0xc801" android:layout_below="@+id/dpPicture" android:layout_alignParentStart="true" />
    <TextView android:textColor="#ff00cbb4" android:id="@+id/hAvgRating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:text="@string/SinglePostRatingreal" android:maxLength="4" android:layout_alignParentTop="false" android:fontFamily="sans-serif-light" android:layout_alignParentEnd="true" />
    <TextView android:textColor="#ff00cbb4" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="3dp" android:text="@string/SinglePostRatingLabel" android:layout_alignParentTop="true" android:fontFamily="sans-serif-light" android:layout_toStartOf="@+id/hAvgRating" />
    <TextView android:id="@+id/HCaption" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SinglePostCaption" android:layout_above="@+id/Rimage" android:layout_toEndOf="@+id/dpPicture" />
</RelativeLayout>
