<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/one" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textColor="#ff00cbb4" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2dp" android:text="@string/editProfileFullNamelabel" android:layout_below="@+id/relativeLayout4" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <TextView android:textColor="#ff00cbb4" android:id="@+id/textView11" android:paddingTop="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2dp" android:text="@string/EditProfileBioTag" android:layout_below="@+id/editName" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <EditText android:id="@+id/editName" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="2dp" android:text="@string/EditProfileName" android:layout_below="@+id/textView8" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <EditText android:id="@+id/editBio" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="2dp" android:text="@string/EditProfileBio" android:maxLength="140" android:layout_below="@+id/textView11" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <TextView android:textColor="#ff00cbb4" android:id="@+id/textView9" android:paddingTop="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2dp" android:text="@string/EditProfileChangePasswordLabel" android:layout_below="@+id/gender" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <EditText android:id="@+id/editPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="2dp" android:layout_below="@+id/textView9" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <Button android:textColor="#000000" android:id="@+id/button9" android:background="#ff00cbb4" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EditProfileUpdateInformation" android:capitalize="none" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="UpdateInformation" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="#ff00cbb4" android:id="@+id/textView23" android:paddingTop="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2dp" android:text="@string/EditProfileRelationShiplabel" android:layout_below="@+id/editBio" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <EditText android:id="@+id/relationship" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="2dp" android:layout_marginBottom="2dp" android:hint="@string/EditProfileRelationHint" android:maxLength="20" android:layout_below="@+id/textView23" android:layout_alignRight="@+id/gender" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:fontFamily="sans-serif-light" android:layout_alignEnd="@+id/gender" android:layout_alignParentStart="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="#ff00cbb4" android:id="@+id/textView25" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2dp" android:text="@string/EditProfileGenderLabel" android:layout_below="@+id/relationship" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <EditText android:id="@+id/gender" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2dp" android:layout_marginTop="2dp" android:layout_marginBottom="2dp" android:hint="@string/EditProfileGender" android:maxLength="1" android:layout_below="@+id/textView25" android:layout_alignRight="@+id/editPassword" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberSigned|phone" android:fontFamily="sans-serif-light" android:layout_alignEnd="@+id/editPassword" android:layout_alignParentStart="true" />
    <RelativeLayout android:id="@+id/relativeLayout4" android:background="#ff00cbb4" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x2801" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <ImageView android:id="@+id/imageView12" android:layout_width="UNKNOWN_DATA_0x2401" android:layout_height="UNKNOWN_DATA_0x2401" android:layout_marginLeft="10dp" android:src="@drawable/ic_arrow_back_black_36dp" android:layout_centerVertical="true" android:onClick="back" android:layout_alignParentStart="true" />
        <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:textColor="#000000" android:id="@+id/textView32" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/editProfileBackButton" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:fontFamily="sans-serif-light" />
    </RelativeLayout>
</RelativeLayout>
