<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/one" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/flag" android:background="#ff000000" android:padding="1dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x11801" android:layout_below="@+id/sCaption" android:layout_alignParentStart="true" />
    <TextView android:textColor="#ff00cbb4" android:id="@+id/rating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleItemViewRatingLabel" android:layout_below="@+id/flag" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <ListView android:id="@+id/RlistView" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x6401" android:layout_above="@+id/Arating" android:layout_below="@+id/rating" android:fastScrollEnabled="true" android:layout_alignParentEnd="true" />
    <Button android:textColor="#000000" android:id="@+id/back" android:background="#ff00cbb4" android:paddingLeft="5dp" android:paddingRight="5dp" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x2801" android:text="@string/SingleItemViewBackText" android:layout_alignParentTop="true" android:onClick="back" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/sFname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/SingleItemViewName" android:layout_below="@+id/back" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/Sdp" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="#ff00cbb4" android:id="@+id/sCaption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleItemViewCaption" android:layout_below="@+id/SDate" android:fontFamily="sans-serif-light" android:layout_alignStart="@+id/SDate" />
    <EditText android:textColor="#ff00d0df" android:id="@+id/Arating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:hint="Add rating" android:autoText="false" android:layout_above="@+id/button2" android:inputType="textCapWords|number|numberSigned|numberDecimal|numberPassword|phone" android:textCursorDrawable="@spinnercompat/MODE_DIALOG" android:layout_toStartOf="@+id/checkBox" android:layout_alignEnd="@+id/checkBox" android:layout_alignParentStart="true" />
    <Button android:textColor="#000000" android:id="@+id/button2" android:background="#ff00cbb4" android:layout_width="wrap_content" android:layout_height="UNKNOWN_DATA_0x2801" android:text="Add" android:capitalize="none" android:layout_alignParentBottom="true" android:onClick="add" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
    <TextView android:textColor="#ff00cbb4" android:id="@+id/averageLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleItemViewRatinglabellll" android:layout_above="@+id/RlistView" android:fontFamily="sans-serif-light" android:layout_toStartOf="@+id/avg" />
    <TextView android:textColor="#ff00cbb4" android:id="@+id/avg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1dp" android:text="@string/SingleItemViewRating" android:maxLength="4" android:layout_above="@+id/RlistView" android:fontFamily="sans-serif-light" android:layout_marginEnd="40dp" android:layout_alignParentEnd="true" />
    <TextView android:id="@+id/SDate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleItemViewDate" android:layout_below="@+id/sFname" android:layout_alignStart="@+id/sFname" />
    <ImageView android:id="@+id/Sdp" android:layout_width="UNKNOWN_DATA_0x3201" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_margin="5dp" android:layout_below="@+id/back" android:layout_alignParentStart="true" />
    <CheckBox android:textColor="#ff00cbb4" android:id="@+id/checkBox" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/SingleItemViewRatingRateAnonly" android:layout_below="@+id/RlistView" android:onClick="checkBox" android:layout_alignParentEnd="true" />
</RelativeLayout>
