<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/nPicture" android:layout_width="UNKNOWN_DATA_0x4601" android:layout_height="UNKNOWN_DATA_0x4601" android:layout_marginLeft="5dp" android:layout_marginTop="5dp" android:layout_marginRight="5dp" android:layout_alignParentTop="true" android:layout_alignParentStart="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/createdBy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleNotificationCreatedBy" android:layout_alignParentTop="true" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/nPicture" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/textView16" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleNotificationRatedYourPictureText" android:layout_alignParentTop="true" android:layout_toEndOf="@+id/createdBy" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/nRating" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleNotificationRating" android:layout_alignParentTop="true" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/textView16" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/textView13" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fullstop" android:layout_alignParentTop="true" android:layout_toEndOf="@+id/nRating" />
</RelativeLayout>
