<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/Rdp" android:layout_width="UNKNOWN_DATA_0x19001" android:layout_height="UNKNOWN_DATA_0xc801" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:layout_below="@+id/PcreatedAt" android:layout_centerHorizontal="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="#ff00cbb4" android:id="@+id/PLrating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/OthersProfilePostCaptionAverageRatinglabel" android:layout_below="@+id/Rdp" android:fontFamily="sans-serif-light" android:layout_alignStart="@+id/Pcaption" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="#ff00cbb4" android:id="@+id/PLSrating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:text="@string/OthersProfilePostCaptionAverageRating" android:maxLength="4" android:layout_alignTop="@+id/PLrating" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/PLrating" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:textColor="#ff00cbb4" android:id="@+id/Pcaption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/OthersProfilePostCaptionLabel" android:layout_alignParentTop="true" android:fontFamily="sans-serif-light" android:layout_alignParentStart="true" />
    <TextView android:id="@+id/PcreatedAt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/OthersProfilePostCaptionCreatedAt" android:layout_below="@+id/Pcaption" android:fontFamily="sans-serif-light" android:layout_alignStart="@+id/Pcaption" />
</RelativeLayout>
