<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/hotName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="5dp" android:text="@string/HottestSingleItemName" android:layout_alignTop="@+id/HoimageView" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/HoimageView" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@+id/hotUserName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HottestSingleItemUserName" android:layout_below="@+id/hotName" android:fontFamily="sans-serif-light" android:layout_alignStart="@+id/hotName" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/textView17" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/HottestSingleItemRatingLabel" android:layout_above="@+id/hotUserName" android:fontFamily="sans-serif-light" android:layout_toStartOf="@+id/hotProRating" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/hotProRating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:layout_marginRight="5dp" android:text="@string/HottestSingleItemRating" android:maxLength="4" android:layout_above="@+id/hotUserName" android:fontFamily="sans-serif-light" android:layout_alignParentEnd="true" />
    <ImageView android:id="@+id/HoimageView" android:layout_width="UNKNOWN_DATA_0x4b01" android:layout_height="UNKNOWN_DATA_0x4b01" android:layout_margin="5dp" android:layout_alignParentTop="true" android:layout_alignParentStart="true" />
</RelativeLayout>
