<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/one" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?unknown_attr_ref: 1010040" android:textSize="25sp" android:textColor="#ff00cbb4" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="33dp" android:text="@string/loginString" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-thin" />
    <EditText android:textColor="#ff00cbb4" android:textColorHint="#ffc5c4c0" android:id="@+id/username_login" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="56dp" android:hint="@string/EmailString" android:ems="10" android:layout_below="@+id/textView3" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" android:textCursorDrawable="@spinnercompat/MODE_DIALOG" android:fontFamily="sans-serif-thin" android:layout_alignParentStart="true" />
    <EditText android:textColor="#ff00cbb4" android:textColorHint="#ffc5c4c0" android:id="@+id/password_login" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="94dp" android:hint="@string/PasswordString" android:ems="10" android:layout_below="@+id/username_login" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:textCursorDrawable="@spinnercompat/MODE_DIALOG" android:fontFamily="sans-serif-thin" android:layout_alignParentStart="true" />
    <Button android:textColor="#000000" android:id="@+id/button" android:background="#ff00cbb4" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x9601" android:layout_height="wrap_content" android:text="@string/logInButtonLogin" android:layout_below="@+id/password_login" android:layout_alignRight="@+id/password_login" android:layout_alignParentLeft="true" android:onClick="RLogIn" android:fontFamily="sans-serif-thin" android:layout_alignEnd="@+id/password_login" android:layout_alignParentStart="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/OrLogin" android:layout_below="@+id/button" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-thin" />
    <Button android:textColor="#000000" android:id="@+id/button4" android:background="#ff00cbb4" android:clickable="true" android:layout_width="UNKNOWN_DATA_0x9601" android:layout_height="wrap_content" android:text="@string/newUserText" android:layout_below="@+id/textView4" android:layout_alignRight="@+id/button" android:layout_alignParentLeft="true" android:onClick="SignUp" android:fontFamily="sans-serif-thin" android:layout_alignEnd="@+id/button" android:layout_alignParentStart="true" />
</RelativeLayout>
