<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/SearchDp" android:layout_width="UNKNOWN_DATA_0x3201" android:layout_height="UNKNOWN_DATA_0x3201" android:layout_alignParentTop="true" android:layout_alignParentStart="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/SearchName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleSearchName" android:layout_alignParentTop="true" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/SearchDp" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="#ff00cbb4" android:id="@+id/SearchRating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/SingleSearchRating" android:layout_alignBottom="@+id/SearchName" android:layout_alignParentTop="true" android:fontFamily="sans-serif-light" android:layout_alignParentEnd="true" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010042" android:id="@+id/SearchUsername" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/SingleSearchUserName" android:layout_below="@+id/SearchName" android:fontFamily="sans-serif-light" android:layout_toEndOf="@+id/SearchDp" />
</RelativeLayout>
